--- a/src/components/aboutUs/styles/galeryPhoto.css
+++ b/src/components/aboutUs/styles/galeryPhoto.css
@@ -2,6 +2,7 @@
     margin:30px 16px 0px 16px;
     display: flex;
     flex-flow: column nowrap;
+    line-height:0;
 }
 .titleGalery{
     font-size: 16px;
