--- a/src/components/aboutUs/styles/sectionHistory.css
+++ b/src/components/aboutUs/styles/sectionHistory.css
@@ -1,6 +1,7 @@
 .sectionHistory{
     margin:30px 16px 0px 16px;
 }
+
 .text{
     font-size: 16px;
     margin-top: 16px;
@@ -16,5 +17,9 @@
     .text{
         font-size:24px;
         margin-top: 33px;
+    }
+    .containerHistoryFlex{
+        display: flex;
+        justify-content: space-between;
     }
 }
