--- a/src/components/aboutUs/styles/transparency.css
+++ b/src/components/aboutUs/styles/transparency.css
@@ -13,16 +13,26 @@
     object-fit: cover;
 }
 
-
 @media screen and (min-width:1024px){
     .sectionTransparency{
-        margin:143px 80px 51px 80px;
+        margin:40px 0px 0px 80px;
     }
     .containerTransparency{
-        margin-top: 36px;
+        margin-top: 0px;
+        padding-left:20px;
     }
     .graphic{
-        width: 624px;
+        width: auto;
         height: 646px;
+    }
+    .textTransparency{
+        width: 316px;
+        height: 116px;
+        padding-top:24px;
+        font-size:24px;
+    }
+    .transparencyFlexBox{
+        display:flex;
+        flex-flow:row wrap;
     }
 }
