--- a/src/components/aboutUs/styles/whatWeArchived.css
+++ b/src/components/aboutUs/styles/whatWeArchived.css
@@ -43,26 +43,28 @@
 
 @media screen and (min-width:1024px){
     .sectionWhatWeArchived{
-        padding:30px 80px 0px 80px;
+        padding:0px 0px 20px 0px;
     }
     .containerWhatWeArchived{
-        margin-left: 150px;
+        margin-top:56px;
+        margin-left:0px;
     }
     .photowahtwearchived{
-        width: 216px;
-        height: 216px;
+        width: 104px;
+        height: 104px;
     }
     .containerPhotoText{
-        margin:32px 227px 0px 20px;
-        width: 216px;
-        height: 401px;
+        margin:32px 20px 0px 0px;
+        width: auto;
+        height: 198px;
     }
-    h1{
+    .titltewhatwh{
         font-size: 30px;
+        padding:30px 0px 0px 80px;
     }
     .textx{
         margin-top: 56px;
-        font-size: 36px;
+        font-size: 22px;
         width: 216px;
     }
 }
