--- a/src/components/demo/login.css
+++ b/src/components/demo/login.css
@@ -16,7 +16,7 @@
 }
 
 .titleIntranet, .textintranet{
-    text-align: start;
+    text-align: center;
     font-size: 16px;
 }
 
@@ -90,7 +90,6 @@
         margin-bottom: 56px;
     }
     .titleIntranet, .textintranet{
-        text-align: start;
         font-size: 18px;
         width: 311px;
     }
@@ -102,6 +101,7 @@
         margin-bottom: 24px;
     }
     .textintranetInput{
+        font-size:18px;
         margin-bottom: 10.62px;
         margin-top: 32px;
     }
@@ -116,6 +116,7 @@
         height: 40px;
         width: 285px;
         height: 51px;
-        padding:16px 81px 16px 15px;
+        padding:16px 0px 16px 15px;
+        font-size:16px;
     }
 }
