--- a/src/components/donation/styles/donateHuertas.css
+++ b/src/components/donation/styles/donateHuertas.css
@@ -78,7 +78,9 @@
   width: 100%;
   object-fit: cover;
 }
-
+.textContainerOficial{
+  margin:0px 16px 0px 16px;
+}
 @media screen and (min-width:1024px){
   .sectionTitleText{
     display:flex;
@@ -87,7 +89,7 @@
   }
   .containerBannerForm{
     height: 304px;
-    width: 1575px;
+    width: 100%;
   }
   h2, .marginTopForm{
     margin-top:56px;
@@ -101,16 +103,14 @@
     height: 197px;
     font-size: 22px;
   }
-  .formHuertasSection{
-    position: absolute;
-    right: 236px;
-    top: 1250px;
-    width: 744px;
-  }
   .titleForms,.titleFormsCheckbox{
-    font-size:74px;
+    font-size:22px;
     text-align: start;
     margin:16px 0px 16px 0px;
+  }
+  .titleForms{
+    padding:10px 0px 0px 0px;
+    width: 544px;
   }
   .inputsFormHuertas, .textareaSection
   , .selectFormHuertas
@@ -119,14 +119,33 @@
     height: 56px;
     border-radius: 32px;
     padding:14px 0px 16px 25px;
-    font-size: 22px;
+    font-size: 18px;
+    margin-bottom:10px;
   }
   .btnSubmitForm{
-    position: absolute;
     width: 544px;
-    right: 200px;
     height: 64px;
-    top: 1000px;
-}
-  
+    font-size:24px;
+    font-weight:bold;
+    align-self:flex-start;
+  }
+  .containerTextForm{
+    display: flex;
+    justify-content: space-around;
+    margin: 0px 161px 0px 161px;
+  }
+  .textareaSection{
+    height: 112px;
+  }
+  .textandCheckbox{
+    display: flex;
+    flex-flow: column nowrap;
+  }
+  .titleFormsCheckbox{
+    width: 525px;
+  }
+  .formCheckbox{
+    height: 20px;
+    width:20px;
+  }
 }
