--- a/src/components/intranetData/styles/intranetDataExport.css
+++ b/src/components/intranetData/styles/intranetDataExport.css
@@ -7,3 +7,11 @@
 #tabPanel {
     padding-top: 10px;
 }
+.containerdatatablecosas{
+    margin:0px 16px 0px 16px;
+}
+@media screen and (min-width:1024px){
+    .containerdatatablecosas{
+        margin:0px 56px 0px 56px;
+    }
+}
