--- a/src/components/landing/styles/footer.css
+++ b/src/components/landing/styles/footer.css
@@ -40,8 +40,8 @@ footer{
   text-decoration: none;
   display: flex;
   flex-flow: row nowrap;
+  align-items: center;
 }
-
 
 
 @media screen and (min-width:1024px){
