--- a/src/components/landing/styles/activitySectionF.css
+++ b/src/components/landing/styles/activitySectionF.css
@@ -1,84 +1,183 @@
-.imgActivity{
-  height: 100px;
-  width: 100px;
- 
-}
-.eachColab{
+.imgActivity {
   height: 100px;
   width: 100px;
 }
-.textActivitySection{
-    background-color: #F4F4F4;
+.eachColab {
+  height: 100px;
+  width: 100px;
+}
+.textActivitySection {
+  background-color: #f4f4f4;
 }
 
-.containerActivitySection{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-    margin: 1.5rem 0px;
-    background-color: #F4F4F4;
-    text-align: start;
+.containerActivitySection {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  margin: 1.5rem 0px;
+  background-color: #f4f4f4;
+  text-align: start;
 }
-.containerActivitySection:focus{
-        outline: -webkit-focus-ring-color auto 1px;
-        outline-color: -webkit-focus-ring-color;
-        outline-style: auto;
-        outline-width: 1px
-}
-
-.btnhref{
-border: none;
+.containerActivitySection:focus {
+  outline: -webkit-focus-ring-color auto 1px;
+  outline-color: -webkit-focus-ring-color;
+  outline-style: auto;
+  outline-width: 1px;
 }
 
-.textActivitySection{
-    display: flex;
-    flex-flow: column nowrap;
-    margin: 16px 16px;
-    margin-top: 3.5rem ;
-    text-align: start;
+.btnhref {
+  border: none;
 }
-.instagram-media-instagram-media-rendered{
+
+.textActivitySection {
+  display: flex;
+  flex-flow: column nowrap;
+  margin: 16px 16px;
+  margin-top: 3.5rem;
+  text-align: start;
+}
+.instagram-media-instagram-media-rendered {
+  width: 100%;
+  height: 11rem;
+  border: 1px rgba(0, 0, 0, 0.2);
+}
+.text-center.hid.btn.btn-primary.btn-xs.design_2.js-hide-if-pos {
+  display: none;
+}
+
+#editMe {
+  display: none;
+}
+
+.h2Carrousel {
+  background-color: white;
+  width: 100%;
+  height: 185px;
+}
+
+.titleActSec {
+  text-align: start;
+}
+.bottomTextInsta {
+  font-style: italic;
+  font-size: 16px;
+  color: #929292;
+  font-weight: lighter;
+  text-align: start;
+}
+.titleActSecs {
+  margin-left: 16px;
+}
+.footerframe {
+  width: 100%;
+}
+
+.item {
+  height: fit-content;
+}
+
+.sectionGaleryPhotos {
+  margin: 30px 16px 0px 16px;
+  display: flex;
+  flex-flow: column nowrap;
+  line-height: 0;
+}
+.titleGalery {
+  font-size: 16px;
+}
+
+.imgGalery {
+  width: 10rem;
+  height: 10rem;
+}
+
+.alice-carousel {
+  position: relative;
+  width: 100%;
+  margin: auto;
+  direction: ltr;
+  position: relative;
+  display: flex;
+  white-space: 1px;
+  line-height: 0;
+  display: inline-flex;
+  justify-content: center;
+  max-width: 50;
+}
+
+.alice-carousel__stage-item {
+  position: relative;
+  display: flex;
+  white-space: 1px;
+  line-height: 0;
+  display: inline-flex;
+  justify-content: space-between;
+  max-width: 50;
+}
+
+.alice-carousel__wrapper {
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  box-sizing: border-box;
+  width: 21rem;
+  height: auto;
+}
+@media screen and (min-width: 1024px) {
+
+  .titleActSecs {
+    font-size: 30px;
+    margin-left: 80px;
+  }
+
+
+
+  .imgActivity {
+    width: 173px;
+    height: 144px;
+  }
+
+  .alice-carousel {
+    position: relative;
     width: 100%;
-    height: 11rem;
-    border: 1px  rgba(0,0,0,.2);
-    
-}
-.text-center.hid.btn.btn-primary.btn-xs.design_2.js-hide-if-pos{
-  display: none
+    margin: auto;
+    direction: ltr;
+    position: relative;
+    display: flex;
+    white-space: space pre; ;
+    line-height: 12rem;
+    display: inline-flex;
+    justify-content: center;
+   
+  }
+
+  .alice-carousel__stage-item {
+    position: relative;
+    display: flex;
+    display: inline-flex;
+    justify-content: space-between;
+    max-width: 50;
+  }
+
+  .alice-carousel__wrapper {
+    position: relative;
+    box-sizing: border-box;
+    width: 90rem;
+    height: auto;
+  }
+  .footerframe {
+    background-image: url("https://www.powr.io/powr.js?platform=html");
+    width: 100%;
+    height: 25rem;
+  }
+  .h2Carrousel {
+    background-color: white;
+    width: 100%;
+    height: 120px;
+  }
+  .powr-instagram-feed{
+      background-image: url("https://www.powr.io/powr.js?platform=html");
+  }
 }
 
-#editMe{
-    display: none
-}
 
-.h2Carrousel{
-background-color: white;
-width: 100%;
-height: 185px;
-}
-
-.titleActSec{
-    text-align: start;
-}
-.bottomTextInsta{
-    font-style: italic;
-    font-size: 16px;
-    color: #929292;
-    font-weight: lighter;
-    text-align: start;
-}
-.titleActSecs{
-    margin-left: 16px;
-}
-.footerframe{
-width: 100%;
-}
-
-
-@media screen and (min-width:1024px){
-    .titleActSecs{
-        font-size: 30px;
-        margin-left: 80px;
-    }
-
-}
