--- a/src/components/donation/styles/donateHuertas.css
+++ b/src/components/donation/styles/donateHuertas.css
@@ -82,6 +82,10 @@
   margin:0px 16px 0px 16px;
 }
 @media screen and (min-width:1024px){
+  .containerEachQuestion{
+    display: flex;
+    flex-flow: column nowrap;
+  }
   .sectionTitleText{
     display:flex;
     flex-flow:column nowrap;
