--- a/src/components/intranetData/styles/bannerIntra.css
+++ b/src/components/intranetData/styles/bannerIntra.css
@@ -12,7 +12,7 @@
 
 
 @media screen and (min-width:1024px){
-    .containerBanner{
+    .containerBannerIntranet{
         display:flex;
         height: 464px;
         padding-top: 0px;
