--- a/src/components/landing/styles/footer.css
+++ b/src/components/landing/styles/footer.css
@@ -3,7 +3,7 @@ footer{
   flex-flow: row nowrap;
   background-color: #B7B7B7;;
   width:100%;
-  height: 151px;
+  height: 188px;
   /* padding: 0px 28px 0px 16px; */
   bottom: 0px;
   align-content: center;
@@ -43,10 +43,14 @@ footer{
   align-items: center;
 }
 
+.linkExterno2{
+  text-decoration: none;
+}
+
 
 @media screen and (min-width:1024px){
   footer{
-    height: 214px;
+    height: 265px;
     width: 100%;
     bottom: 0px;
     /* padding: 0px 28px 0px 16px; */
@@ -67,6 +71,5 @@ footer{
     width: 38px;
   } 
  
-
 
 }
